--- a/painel_jstec_autenticado.html
+++ b/painel_jstec_autenticado.html
@@ -199,7 +199,7 @@
       ⚠️ <strong>Atenção:</strong> As imagens enviadas devem ter no máximo
       <strong>10 MB</strong>.<br />
       Para evitar erros, recomendamos utilizar formatos mais leves como
-      <code>.WEBP</code> ou <code>.JPG</code> em vez de <code>.PNG</code>.
+      <code></code><code>.JPG</code> em vez de <code>.PNG</code>.
     </div>
 
     <script>
